--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="css/aside.css">
     <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <script src="https://code.jquery.com/jquery-3.7.0.min.js" type="text/javascript"></script>
      <!-- slick -->
      <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
@@ -107,11 +109,6 @@
                   <p class="p">총 9개 작업물이 있습니다</p>
                 </div>
               <article class="flex">
-                  <div class="slide"> 
-                      <span>01</span>
-                      <span>/</span>
-                      <span>03</span>
-                  </div>
                <div class="flex">
                       <ul class="portSlide">
                           <li>
@@ -128,7 +125,7 @@
                          </li>
                         <li>
                             <img src="img/work4.PNG" alt="" width="447px" height="298px">
-                            <small class="small">HB Paper</small>
+                            <small class="small">Hitenjinro</small>
                         <li>
                             <img src="img/work5.PNG" alt="" width="447px" height="298px">
                             <small class="small">My portfolio</small>
@@ -151,10 +148,10 @@
         </section>
         <section id="contact" class="paddingT50 paddingB50">
             <div class="wrap">
-                <h2 class="h2">contact me</h2>
+                <h3 class="h3">contact me</h2>
                 <div class="flex"><ul>
                 <li>010-5126-1665</li>
-                <li>nguyendangbichhanh@gmail.com</li>
+                <li>NGUYENDANGBICHHANH@gmail.com</li>
                 <li>경기도 성남시 중원구 금광로 72</li></div>
                 </ul>
             </div>
