--- a/index.html
+++ b/index.html
@@ -179,6 +179,8 @@
       </script>
 </head>
 <body>
+    <div class="circle-1"data-aos="zoom-in-left" data-aos-duration="1500" ></div>
+    <div class="circle-2"data-aos="zoom-in-left" data-aos-duration="2000" ></div>
     <!--상단영역-->
     <header>
         <div class="wrap">
@@ -242,7 +244,9 @@
                 </ul>
             </div>
             </div>
+        
         </section>
+        
         <section id="skill"class="paddingT50 paddingB50">
             <div class="wrap">
                 <h3 class="h3">Skill</h3>
@@ -350,10 +354,10 @@
                     <h5 data-aos="flip-up">If you have any question, contact with me</h5>
                     <ul class="sns"data-aos="flip-up"data-aos-duration="1500" >
                         <li>
-                            <a href="">Facebook</a>
+                            <a href="https://www.facebook.com/hanmi0116/">Facebook</a>
                         </li>
                         <li>
-                            <a href="">Instagram</a>
+                            <a href="https://www.instagram.com/h.ymieong/">Instagram</a>
                         </li>
                         <li>
                            <a href="">Kakaotalk</a>
