--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             });
            //MENU CLICK
            $("header div.wrap > a").click(function(){
-                $("header .wrap .menu").addClass("showMenu");
+                $("header .wrap .menu").toggleClass("showMenu");
 
                 // $(".close").remove();
                 // $("header div.wrap > a").hide();
@@ -133,8 +133,9 @@
                 //     $("header div.wrap > a").show();   
                 //     return false;
                 // });
+              
                 $("header div.wrap > a").toggleClass("close");
-            
+                    return false; 
            });
         });
      </script>
@@ -193,6 +194,19 @@
             AOS.init();
         });
       </script>
+     <!--title video-->
+     <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/jquery.mb.YTPlayer/3.3.4/css/jquery.mb.YTPlayer.min.css">
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mb.YTPlayer/3.3.4/jquery.mb.YTPlayer.min.js"></script>
+     <style>
+        #background {
+        z-index: -1;
+        }
+    </style>
+    <script>
+        jQuery( function() {
+        jQuery( '#background' ).YTPlayer();
+        });
+    </script> -->
 </head>
 <body>
     <div class="circle-1"data-aos="zoom-in-left" data-aos-duration="1500" ></div>
@@ -232,6 +246,20 @@
                 <img src="img/IMG_5587.PNG"data-aos="fade-left"data-aos-duration="1500" alt="">
             </div>
         </div>
+        <!-- <div id="background" class="player" data-property="{
+            videoURL: 'https://youtu.be/130Af_fxwEk',
+            mute: true,
+            showControls: false,
+            useOnMobile: true,
+            quality: 'highres',
+            containment: 'body',
+            loop: true,
+            autoPlay: true,
+            stopMovieOnBlur: false,
+            startAt: 0,
+            opacity: 1
+          }">
+          </div> -->
     </div>
     <!--메인영역-->
     <main>
