--- a/index.html
+++ b/index.html
@@ -193,6 +193,19 @@
             AOS.init();
         });
       </script>
+      <!--타이틀 영상 배경-->
+      <link href="https://cdnjs.cloudflare.com/ajax/libs/jquery.mb.YTPlayer/3.3.4/css/jquery.mb.YTPlayer.min.css">
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mb.YTPlayer/3.3.4/jquery.mb.YTPlayer.min.js"></script>
+      <style>
+        #background {
+            z-index: -1;
+            }
+      </style>
+      <script>
+        jQuery( function() {
+             jQuery( '#background' ).YTPlayer();
+                });
+      </script>
 </head>
 <body>
     <div class="circle-1"data-aos="zoom-in-left" data-aos-duration="1500" ></div>
@@ -231,8 +244,22 @@
             <div class="right"data-aos-duration="1500">
                 <img src="img/IMG_5587.PNG"data-aos="fade-left"data-aos-duration="1500" alt="">
             </div>
-        </div>
+        </div> 
     </div>
+    <div id="background" class="player" data-property="{
+        videoURL: 'https://youtu.be/GQtq2kW0SpM',
+        mute: true,
+        showControls: false,
+        useOnMobile: true,
+        quality: 'highres',
+        containment: 'body',
+        loop: true,
+        autoPlay: true,
+        stopMovieOnBlur: false,
+        startAt: 0,
+        opacity: 1
+      }">
+      </div>
     <!--메인영역-->
     <main>
         <section id="about" class="paddingT50 paddingB50">
