--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <meta property="og:url" content="https://hanmii16.github.io/personal-v2/">
     <meta property="og:description" content="웹퍼블리셔취업을 위한 개인포토폴리오 사이트입니다">
     <meta property="og:keywords" content="개인포토폴리오 웹디자인 웹퍼블러셔 개인홈페이지">
-    <meta property="og:title" content="hanmi's 개인홈페이지::예비웹퍼블리셔">
+    <meta property="og:title" content="hanmi's 개인홈페이지::웹퍼블리셔">
     <meta name="description" content="웹퍼블리셔취업을 위한 개인포토볼리오 사이트입니다">
     <meta name="keywords" content=" 웹디자인,웹퍼블러셔">
-    <meta  name="og:image"  content="https://www.daleseo.com/html-meta/thumbnail.png" />
     <title>한미's 개인홈페이지</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/common.css">
@@ -401,7 +400,7 @@
                                 <figcaption>
                                     작업진도: 90%
                                     사용도구: html,css,jquery
-                                    <a href="">View more</a>
+                                    <a href="work/pf3-hbpaper/index.html">View more</a>
                                 </figcaption>
                             </figure>
                     </li>
