--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
     <!--CSS-->
     <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="css/index.css">
@@ -200,13 +203,11 @@
       </script>
 </head>
 <body>
-    <!-- <div class="circle-1"data-aos="zoom-in-left" data-aos-duration="1500" ></div>
-    <div class="circle-2"data-aos="zoom-in-left" data-aos-duration="2000" ></div> -->
     <!--상단영역-->
     <header>
         <div class="wrap">
         <h1>
-            <a href="#">Yoon Hanmi</a>
+            <a href="">Yoon Hanmi</a>
         </h1>
         <div class="menu">
             <ul data-aos="fade-left"data-aos-duration="1500">
@@ -227,7 +228,7 @@
     <div id="title">
         <div class="wrap flex column align-center center">
             <div class="left">
-                <h2 class="h1"data-aos="fade-right"data-aos-duration="1500">WELCOME TO MY
+                <h2 class="h1"data-aos="fade-up"data-aos-duration="1500">WELCOME TO MY
                     <br>
                     <strong><span>PORT</span><span>FOLIO</span></strong></h2>
                     <span id="typing-effect" class="typed-text-output"></span> 
@@ -239,9 +240,10 @@
                 <img src="img/girl.png"data-aos="fade-left"data-aos-duration="1500" alt="">
             </div>
             <div class="image"></div>
-        </div> 
-        <!-- <div id="background" class="player" data-property="{
-            videoURL: 'https://youtu.be/kJeuRcFO3VE',
+        </div>    
+    </div>
+        <div id="background" class="player" data-property="{
+            videoURL: 'https://youtu.be/GQtq2kW0SpM',
             mute: true,
             showControls: false,
             useOnMobile: true,
@@ -252,10 +254,8 @@
             stopMovieOnBlur: false,
             startAt: 0,
             opacity: 1
-          }">
-          </div> -->
-    </div>
-    
+        }">
+        </div>
     <!--메인영역-->
     <main>
         <section id="about" class="paddingT50 paddingB50">
@@ -290,16 +290,11 @@
                 </ul>
             </div>
             <div class="intro">
-                <p>"그림을 좋아하여 처음엔 웹디자인을 고민하였습니다. 
-                    그림을 온라인으로 공유하고 싶은 마음이 커 조금씩 배워보다가 학원을 다니면서 웹디자인을 알게 되고 코딩을 배우면서 점차 흥미가 웹 퍼블리셔로 기울게 되었습니다. 
-                    베트남 출신인 저에게 한국에서의 생활은 많은 도전과 기회를 제공했습니다. 새로운 문화와 언어에 적응하면서, 다양한 배경을 가진 사람들과의 소통 방법을 배웠습니다. 
-                    덕분에 제가 디자인을 할 때도 다양한 사용자의 요구와 기대를 고려하는 데 큰 도움이 되었습니다."
-                </p>
+                <img src="img/IMG_5093.JPG" alt="">
                 <span></span>
             </div>
             </div>
         </section>
-        
         <section id="skill"class="paddingT50 paddingB50">
             <div class="wrap">
                 <h3 class="h3">Skill</h3>  
@@ -460,7 +455,7 @@
                         <a href="">hanhmit161@naver.com</a>
                     </div>
                     <div class="follow">
-                        <h5 class="h5">Follow</h5>
+                        <h5 class="h5">Follow me in SNS</h5>
                         <ul class="sns" >
                             <li>
                                 <a href="https://www.facebook.com/hanmi0116/">Facebook</a>
