--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     <div id="title">
         <div class="wrap flex column align-center center">
             <div class="left">
-                <h2 class="h1"data-aos="fade-up"data-aos-duration="1500">WELCOME TO MY
+                <h2 class="h1">WELCOME TO MY
                     <br>
                     <strong><span>PORT</span><span>FOLIO</span></strong></h2>
                     <span id="typing-effect" class="typed-text-output"></span> 
@@ -236,8 +236,8 @@
                         나의 꿈은 웹을 통해 세상을 더 아름답게 만드는 것입니다.
                      </p> 
             </div>
-            <div class="right"data-aos-duration="1500">
-                <img src="img/girl.png"data-aos="fade-left"data-aos-duration="1500" alt="">
+            <div class="right">
+                <img src="img/girl.png"alt="">
             </div>
             <div class="image"></div>
         </div>    
@@ -275,7 +275,7 @@
                         Drawing,Travel</li>
                 </ul>
             </div>
-            <div class="educate"data-aos="fade-left"data-aos-duration="1500">
+            <div class="educate"data-aos="fade-up"data-aos-duration="1500">
                 <small class="small">MY . EDUCATION</small>
                 <ul>
                     <li>2015~2019
@@ -373,7 +373,7 @@
                             <figcaption>
                                 작업진도: 90%
                                 사용도구: html,css,jquery
-                                <a href="">View more</a>
+                                <a href="work/pf1-accuniq/index.html">View more</a>
                             </figcaption>
                         </figure>
                     </li>
@@ -384,7 +384,7 @@
                                 <figcaption>
                                     작업진도: 90%
                                     사용도구: html,css,jquery
-                                    <a href="">View more</a>
+                                    <a href="work/pf2-lpoint/index.html">View more</a>
                                 </figcaption>
                             </figure>
                     </li>
@@ -406,7 +406,7 @@
                                 <figcaption>
                                     작업진도: 90%
                                     사용도구: html,css,jquery
-                                    <a href="">View more</a>
+                                    <a href="work/pf5-hitenjinro/index.html">View more</a>
                                 </figcaption>
                             </figure>
                     </li>
@@ -417,7 +417,7 @@
                                 <figcaption>
                                     작업진도: 90%
                                     사용도구: html,css,jquery
-                                    <a href="">View more</a>
+                                    <a href="work/the-hue/index.html">View more</a>
                                 </figcaption>
                             </figure>
                     </li>
@@ -428,18 +428,18 @@
                                 <figcaption>
                                     작업진도: 90%
                                     사용도구: html,css,jquery
-                                    <a href="">View more</a>
+                                    <a href="work/sanrio/index.html">View more</a>
                                 </figcaption>
                             </figure>
                     </li>
-                    <li data-aos="fade-up"data-aos-duration="1500"data-aos-delay="1500">
+                    <li data-aos="fade-up"data-aos-duration="1500"data-aos-delay="1400">
                             <h4 class="h4">Baexang gallery</h4>
                             <figure>
                                 <img src="img/work8.png" alt="">
                                 <figcaption>
                                     작업진도: 90%
                                     사용도구: html,css,jquery
-                                    <a href="">View more</a>
+                                    <a href="work/baexang-gallery/index.html">View more</a>
                                 </figcaption>
                             </figure>
                     </li>
@@ -448,7 +448,7 @@
         </section>
         <section id="contact" class="paddingT50 paddingB50">
             <h3 class="h3">IF YOU HAVE ANY QUESTION CONTACT WITH ME</h3>
-            <div class="wrap">
+            <div class="wrap"data-aos="fade-up"data-aos-duration="1500">
                 <div class="contact-info">
                     <div class="connect">
                         <h5 class="h5">Connect</h5>
@@ -469,7 +469,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="contact-form"data-aos="fade-left"data-aos-duration="1500">
+                <div class="contact-form">
                     <form action="#" method="post">
                         <div class="form-group">
                             <label for="name">Name</label>
